# vitia-ia

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/: config.py  main.py
src/adapters/: claude_adapter.py  factory.py  llm_adapter.py  off_client.py  prompts.py  supabase_client.py
src/auth/: __init__.py  dependencies.py  jwt.py  models.py
src/domain/: food.py
src/routes/: analyze.py  food.py  parse.py
src/services/: errors.py  food_matcher.py  photo_analysis.py  text_parsing.py
src/utils/: image.py
tests/: conftest.py  test_analyze_route.py  test_auth.py  test_claude_adapter.py  test_config.py  test_factory.py  test_food_domain.py  test_food_matcher.py  test_food_model.py  test_food_route.py  test_health.py  test_image_utils.py  test_parse_route.py  test_photo_analysis_service.py  test_text_parsing_service.py
tests/integration/: test_analyze_integration.py
