[project]
name = "vitia-ia"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "pyjwt[crypto]>=2.9.0",
    "httpx>=0.27.0",
    "uvicorn>=0.32.0",
    "rapidfuzz>=3.14.5",
    "pillow-heif>=0.18.0",
    "python-magic>=0.4.27",
    "python-json-logger>=3.2.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
